<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/login_padding_45dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_top_60dp"
        android:padding="10dp"
        android:text="@string/log_in_heading"
        android:textColor="@android:color/white"
        android:textSize="@dimen/heading_text_sizesp_40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/email_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:background="@drawable/edit_text_background"
        android:inputType="textEmailAddress"
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="@dimen/edit_text_drwable_padding_10dp"
        android:hint="@string/email_hint"
        android:maxLines="1"
        android:text="ash@ash.com"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/edit_text_font_24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:drawablePadding="@dimen/margin_10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:text="12345678"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="@dimen/edit_text_font_24sp"
        app:layout_constraintTop_toBottomOf="@id/email_txt" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size_21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/password_txt"
        app:layout_constraintStart_toStartOf="@id/password_txt"
        app:layout_constraintTop_toBottomOf="@id/password_txt" />
    <TextView
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/signup_txt"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/error_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>